update package json

--- a/packages/grpc_service_2/package.json
+++ b/packages/grpc_service_2/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "a6ba8f99f5b52fde675f2db3061edaa86630d27e"
 }
