--- a/packages/grpc_service_1/package.json
+++ b/packages/grpc_service_1/package.json
@@ -1,5 +1,8 @@
 {
   "name": "grpc_service_1",
   "version": "1.1.0",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "grpc_service_2": "1.1.1"
+  }
 }
