--- a/packages/grpc_service_1/package.json
+++ b/packages/grpc_service_1/package.json
@@ -1,9 +1,9 @@
 {
   "name": "grpc_service_1",
-  "version": "2.0.5",
+  "version": "3.0.0-alpha.1+7bef6fb",
   "description": "",
   "dependencies": {
-    "grpc_service_2": "^1.1.5"
+    "grpc_service_2": "^2.0.0-alpha.6+7bef6fb"
   },
-  "gitHead": "114501f9d39b2693eb06c1026c6b096233ac96ca"
+  "gitHead": "7bef6fbe1b8a591ca8121ce52e05d4f7b9eee9cd"
 }
