--- a/packages/grpc_service_2/package.json
+++ b/packages/grpc_service_2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grpc_service_2",
-  "version": "2.0.0-alpha.6+7bef6fb",
+  "version": "2.0.0-alpha.7",
   "description": "",
   "main": "index.js",
   "scripts": {
